# ekstrakcja

./: README.md  pyproject.toml
src/backend/: main.py
src/backend/routes/: routes.py
